Fix mis-aligned member images

--- a/css/style.css
+++ b/css/style.css
@@ -756,7 +756,7 @@ button.buttom.right:hover {
 .supTokens .col-sm-6{width: 100%;}
 .supTokens .sectionBg {padding: 50px 0;}
 .ourTeam .col-sm-3{width: 50%;}
-.singleMember {margin-bottom: 50px;}
+.singleMember {margin-bottom: 50px;min-height:345px;}
 
 }
 
